--- a/weapp/static_v2/js/view/apps_tags_selector/template.html
+++ b/weapp/static_v2/js/view/apps_tags_selector/template.html
@@ -1,8 +1,8 @@
 <script id="apps-tags-selector-tmpl" type="text/x-handlebar-tmpl">
 <div class="xui-apps-tagsSelector">
     <select class="xui-i-select">
-        {{#each tags}}
-            <option value="{{id}}" {{#ifCond tags.type '===' 'no_tags'}}selected{{/ifCond}}>{{name}}</option>
+        {{#each taglist}}
+            <option value="{{id}}" {{#ifequal ../selectId  id }}selected{{/ifequal}}>{{name}}</option>
         {{/each}}
     </select>
 </div>
