修复‘无分组的情况

--- a/weapp/static_v2/js/view/apps_tags_selector/template.html
+++ b/weapp/static_v2/js/view/apps_tags_selector/template.html
@@ -1,7 +1,7 @@
 <script id="apps-tags-selector-tmpl" type="text/x-handlebar-tmpl">
 <div class="xui-apps-tagsSelector">
     <select class="xui-i-select">
-    <option value="0" {{#ifequal ../selectId '' }}selected{{/ifequal}}>无分组</option>
+    <option value="0" {{#ifequal ../selectId '' }}selected{{/ifequal}}>未分组</option>
     {{#each taglist}}
         <option value="{{id}}" {{#ifequal ../selectId  id }}selected{{/ifequal}}>{{name}}</option>
     {{/each}}
