微信实时消息局部刷新

--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -195,11 +195,13 @@
 </script>
 <script type="text/javascript">
 	document.addEventListener("visibilitychange", common_interval_check_func, false);
-
+    var timerCount = -1;
+    var old_unread_count = 0;
 	function common_interval_check_func(){
 		if(document.visibilityState != 'visible'){
 			return
 		}
+        timerCount ++;
 		W.getApi().call({
 			app:'new_weixin',
 			resource:'outline',
@@ -224,6 +226,12 @@
 				}
 
 				//微信未读消息计数
+                if($('.xa-unreadMessageCountBdge').length > 0){
+                    old_unread_count = 0;
+                }
+                $('.xa-unreadMessageCountBdge').each(function(){
+                    old_unread_count += parseInt($(this).text());
+                });
 				var unreadRealtimeCount = data.unread_realtime_count;
 				var msgTip = $('.xa-msgTip');
 				if (unreadRealtimeCount > 0){
@@ -232,6 +240,13 @@
 						unreadRealtimeCount = '99+'
 					}
 					msgTip.text(unreadRealtimeCount);
+                    //如果有新的消息，则reload table
+                    var _table = $('[data-ui-role="advanced-table"]').data('view');
+                    if(timerCount!=0 && old_unread_count < parseInt(unreadRealtimeCount) && (window.location.href.indexOf('realtime_messages_detail')>=0 || $('.xa-count.active').text().indexOf('所有信息')>=0) && !is_editing && _table){
+                        console.log('有新消息,reload~');
+                        _table.reload({showLoading: false});
+                    }
+                    if(!is_editing) old_unread_count = parseInt(unreadRealtimeCount);
 				} else {
 					msgTip.hide();
 				}
