--- a/weapp/static_v2/css/base.css
+++ b/weapp/static_v2/css/base.css
@@ -601,6 +601,9 @@ select{
 .xui-mainPanel .xui-sideBar-orderMoney{
 	background-position: -144px -63px;
 }
+.xui-mainPanel .xui-sideBar-configProdcutList{
+	background-position: -96px -200px;
+}
 .xui-mainPanel .xui-sideBar > ul{
 	margin-top:10px;
 }
