--- a/weapp/mall/templates/mall/editor/config_product_list.html
+++ b/weapp/mall/templates/mall/editor/config_product_list.html
@@ -37,7 +37,7 @@
         </fieldset>
         <fieldset >
             <div class="form-group">
-                <label class="control-label col-sm-2 ml10 pt0 w110">销量排行：</label>
+                <label class="control-label col-sm-2 ml10 pt0 w110">商品排序：</label>
                 <label class="inline">
                     <input type="radio" name='product_sales_sort' value="1" {% if mall_config.show_product_sales_sort %} checked {% endif %}><b style="vertical-align: text-bottom;font-weight:normal;display:inline-block;">&nbsp;&nbsp;开启</b>
                 </label>
