--- a/weapp/mall/templates/mall/editor/config_product_list.html
+++ b/weapp/mall/templates/mall/editor/config_product_list.html
@@ -50,10 +50,10 @@
             <div class="form-group">
                 <label class="control-label col-sm-2 col-sm-offset-1 pt0 w110">销量排行：</label>
                 <label class="w50 inline">
-                    <input type="radio" name='product_sales_sort' value="1" {% if mall_config.show_product_sales_sort %} checked {% endif %}><b style="vertical-align: text-bottom;font-weight:normal;display:inline-block;">&nbsp;&nbsp;开启</b>
+                    <input type="radio" name='product_sort' value="1" {% if mall_config.show_product_sort %} checked {% endif %}><b style="vertical-align: text-bottom;font-weight:normal;display:inline-block;">&nbsp;&nbsp;开启</b>
                 </label>
                 <label class="w70 inline">
-                    <input type="radio" name='product_sales_sort' value="0" {% if not mall_config.show_product_sales_sort %} checked {% endif %}><b style="vertical-align: text-bottom;font-weight:normal;display:inline-block;">&nbsp;&nbsp;关闭</b>
+                    <input type="radio" name='product_sort' value="0" {% if not mall_config.show_product_sort %} checked {% endif %}><b style="vertical-align: text-bottom;font-weight:normal;display:inline-block;">&nbsp;&nbsp;关闭</b>
                 </label>
             </div>
         </fieldset>
