新建返利活动code_base

--- a/weapp/apps/customerized_apps/rebate/templates/editor/rebates.html
+++ b/weapp/apps/customerized_apps/rebate/templates/editor/rebates.html
@@ -89,7 +89,7 @@
 	<div class="panel panel-default xui-tableBox">
 
 		<div class="panel-heading xui-headStyle clearfix">
-                <a href="/apps/rebate/rebate_rule/" class="btn btn-success ml10 fr xui-btnSetting"><span class="xui-add-btn-icon">+</span>新建返利活动</a>
+                <a href="/apps/rebate/rebate/" class="btn btn-success ml10 fr xui-btnSetting"><span class="xui-add-btn-icon">+</span>新建返利活动</a>
             </div>
 		<div
 			class="panel-body panel-table p0"
