--- a/weapp/apps/customerized_apps/rebate/templates/editor/create_rebate_rule.html
+++ b/weapp/apps/customerized_apps/rebate/templates/editor/create_rebate_rule.html
@@ -72,8 +72,8 @@
 <ul class="breadcrumb">
     <li>您当前所在位置</li>
     <li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
-    <li><a href="/apps/red_envelope/red_envelope_rule_list/">分享红包</a></li>
-    <li class="active">新建分享红包</li>
+    <li><a href="/apps/rebate/rebates/">返利活动</a></li>
+    <li class="active">新建返利活动</li>
 </ul>
 {% if is_deleted_data %}
     <div style="background-color: #EAEEF7;" class="clearfix">
@@ -87,7 +87,7 @@
 
 <div class="xui-unchangedCover{% if not red_envelope_rule %}hidden{% endif%}"></div>
 <section class="mt0" style="border:0;">
-  <span class="xui-fontBold ml30 mt15" style="font-size:14px;display:inline-block;">活动设置</span>
+  <span class="xui-fontBold ml30 mt15" style="font-size:14px;display:inline-block;">返利设置</span>
   <hr class="ml30" style="border-color:#ccc;margin-top:8px;width:638px;">
   <fieldset class="mt30">
     <div class="form-group h40">
@@ -96,27 +96,6 @@
           <input type="text" class="input-xlarge" id="name" name="name" style="width: 150px" value="{{ red_envelope_rule.name }}" data-validate="require-notempty::活动名称不能为空,,require-string::最多可以输入18个字" maxlength="18" placeholder="最多可以输入18个字"/>
           <div class="errorHint" style="margin-left:120px;"></div>
         </div>
-    </div>
-    <div class="form-group h40">
-      <label class="control-label col-sm-2 col-sm-offset-1 pt0 w110 star_show">奖励</label>
-      <div class="controls">
-        {% if coupon_rule %}
-            <select id="coupon_rule" style="width:150px">
-                <option>{{ coupon_rule.name }}</option>
-            </select>
-        {% else %}
-          <select id="coupon_rule" style="width:150px" name="coupon_rule" data-validate="require-select-positive-option">
-              <option value="-1">请选择优惠券</option>
-              {% for rule in coupon_rules %}
-                <option value="{{ rule.id }}" data-remained-count="{{ rule.remained_count }}">{{rule.name}}</option>
-              {% endfor %}
-          </select>
-          &nbsp;&nbsp;<span class="hidden"><a href="">修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<span style="color:#969a9d;">库存：</span></span>
-           <p class="xa-couponTip xui-couponTip hidden">当库存为0时用户将无法获取优惠券</p>
-          <div class="errorHint" data-error-hint="请选择奖励" style="display: inline-block;"></div>
-          <div class="xui-i-help pt5 xa-couponHelp" style="margin-left: 120px;">只能选择"每人限领"为"不限"的优惠券</div>
-        {% endif %}
-      </div>
     </div>
 
     <div class="form-group">
@@ -185,39 +164,7 @@
         <span class="xui-i-help ml5">注：空为不限制</span>
         <div class="errorHint ml110 mt" data-error-hint="请输入正整数"></div>
     </div>
-
-    <div class="form-group h500">
-      <label class="control-label col-sm-2 col-sm-offset-1 pt0 w110">活动说明</label>
-      <div class="controls">
-          <div style="margin-left:120px;">
-            <div class="xui-i-help">(上传图片要求宽度在480~620之间，高度小于等于960，大小不超过500k)</div>
-            <textarea class="xui-hide" id="detail" name="detail" data-ui-role="richtext-editor-red" data-maxCount="1000" data-type="full" data-height="150" data-width="420">
-                {% if red_envelope_rule %}{{ red_envelope_rule.use_info|format_emotion|safe }}{% endif %}
-            </textarea>
-          </div>
-        <div class="errorHint"></div>
-      </div>
-    </div>
   </fieldset>
-    <fieldset>
-        <span class="xui-fontBold ml30" style="font-size:14px;">分享图文设置</span>
-        <hr class="ml30" style="border-color:#ccc;margin-top:8px;width:638px;">
-        <div class="form-group pr" style="min-height: 160px;;">
-            <label for="" class="control-label col-sm-2 col-sm-offset-1 pt0 w110">分享图片</label>
-            <p class="xui-imgTips">注：不上传为使用默认图片<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;推荐尺寸:90*90，仅支持jpg,png&nbsp;&nbsp;<i class="xa-tips">?</i></p>
-            <input type="hidden" name="share_pic" id="share_pic" value="{% if red_envelope_rule.share_pic %}{{red_envelope_rule.share_pic }}{% else %}/static_v2/img/editor/redEnv.jpg{% endif %}" data-ui-role="image-selector" data-button-text="重新上传" data-format="jpg; *.png;" data-show-delete="false" data-width="90" data-height="90" />
-            <div data-ui-role="image-selector-view" auto-show-help="false" style="margin-left: 120px;">
-            </div>
-            <div class="errorHint"></div>
-        </div>
-        <div class="form-group">
-            <label for="" class="control-label col-sm-2 col-sm-offset-1 pt0 w110 star_show">分享描述</label>
-            <div class="controls">
-                <textarea class="input-xlarge w280" style="height: 100px" id="remark" name="remark" placeholder="最多可输入26个字" data-validate="require-notempty::分享描述不能为空" maxlength="26">{{ red_envelope_rule.share_title }}</textarea>
-                <div class="errorHint ml120"></div>
-            </div>
-        </div>
-    </fieldset>
   <hr style="border-color:#ccc;">
   <fieldset>
     <div class="form-group mt5 mr5 xa-operateBtns" id="operateBtns">
