未发货订单数角标缓存改为手动调用更新

--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -217,6 +217,7 @@
 				//待发货订单计数
 				var unship_order_count = data.unship_order_count;
 				var orderTipItem = $('.xa-orderTip');
+                console.log('unship_order_count:',unship_order_count)
 				if(unship_order_count>0){
 					orderTipItem.show();
 					if(unship_order_count>99){
