优化微信群发消息

--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -182,6 +182,7 @@
 </div>
 
 <script type="text/javascript">
+    var is_editing = false;
 	W.uid = {{ user.id }};
 	W.mid = {{ request.manager.id }};
 	W.username = "{{ user.username }}";
