--- a/weapp/weixin2/templates/weixin/message/mass_sent_messages.html
+++ b/weapp/weixin2/templates/weixin/message/mass_sent_messages.html
@@ -107,7 +107,7 @@
                                 {{else}}
                                     发送失败&nbsp;&nbsp;<a href="javascript:void 0" class="xa-resend"
                                     data-group-id="${message.group_id}"
-                                    data-message-content="{{html message.message_content}}"
+                                    data-message-content="${message.message_content}"
                                     data-message-type="${message.message_type}"
                                     data-log-id="${message.id}">重发一次？</a>
                                 {{/if}}
